--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,111 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
+anyio==4.12.0
+appnope==0.1.4
+asttokens==3.0.1
+attrs==25.4.0
+catboost==1.2.8
 certifi==2025.11.12
 charset-normalizer==3.4.4
+colorama==0.4.6
+coloredlogs==15.0.1
+comm==0.2.3
+contourpy==1.3.3
+cycler==0.12.1
+datasets==4.4.2
+debugpy==1.8.19
+decorator==5.2.1
+dill==0.4.0
+executing==2.2.1
 filelock==3.20.1
-fsspec==2025.12.0
+flatbuffers==25.12.19
+fonttools==4.61.1
+frozenlist==1.8.0
+fsspec==2025.10.0
+graphviz==0.21
+h11==0.16.0
 hf-xet==1.2.0
+httpcore==1.0.9
+httpx==0.28.1
 huggingface-hub==0.36.0
+humanfriendly==10.0
 idna==3.11
+ipykernel==7.1.0
+ipython==9.8.0
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
 Jinja2==3.1.6
+joblib==1.5.3
+jupyter_client==8.7.0
+jupyter_core==5.9.1
+kiwisolver==1.4.9
 MarkupSafe==3.0.3
+matplotlib==3.10.8
+matplotlib-inline==0.2.1
+ml_dtypes==0.5.4
 mpmath==1.3.0
+multidict==6.7.0
+multiprocess==0.70.18
+narwhals==2.14.0
+nest-asyncio==1.6.0
 networkx==3.6.1
 numpy==2.4.0
+onnx==1.20.0
+onnxruntime==1.23.2
+onnxruntime-directml==1.23.0
+optimum==2.1.0
+optimum-onnx==0.1.0
 packaging==25.0
 pandas==2.3.3
+parso==0.8.5
+pexpect==4.9.0
 pillow==12.0.0
+platformdirs==4.5.1
+plotly==6.5.0
+prompt_toolkit==3.0.52
+propcache==0.4.1
+protobuf==6.33.2
+psutil==7.1.3
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyarrow==22.0.0
+Pygments==2.19.2
+pyparsing==3.2.5
+pyreadline3==3.5.4
 python-dateutil==2.9.0.post0
+pytorch-tabnet==4.1.0
 pytz==2025.2
 PyYAML==6.0.3
+pyzmq==27.1.0
 regex==2025.11.3
 requests==2.32.5
+rocm==7.11.0a20260103
+rocm-sdk-core==7.11.0a20260103
+rocm-sdk-libraries-gfx120X-all==7.11.0a20260103
 safetensors==0.7.0
+scikit-learn==1.8.0
+scipy==1.16.3
+seaborn==0.13.2
 setuptools==80.9.0
 six==1.17.0
+stack-data==0.6.3
 sympy==1.14.0
+threadpoolctl==3.6.0
 tokenizers==0.22.1
-torch==2.9.1
-torchaudio==2.9.1
-torchvision==0.24.1
+torch==2.9.1+rocm7.11.0a20260103
+torch-directml==0.2.5.dev240914
+torchaudio==2.9.0+rocm7.11.0a20260103
+torchvision==0.24.0+rocm7.11.0a20260103
+tornado==6.5.4
 tqdm==4.67.1
+traitlets==5.14.3
 transformers==4.57.3
 typing_extensions==4.15.0
 tzdata==2025.3
 urllib3==2.6.2
 uv==0.9.21
+wcwidth==0.2.14
+xgboost==3.1.2
+xxhash==3.6.0
+yarl==1.22.0
