--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
 data/
 .venv
 *.csv
+
+# Large files
+final_severity_model/
+severity_model_checkpoints/
+
+# Python environment
+__pycache__/
+.venv/
+.env
+.ipynb_checkpoints/
+
+# System files
+.DS_Store
