--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
+accelerate==1.12.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.13.2
 aiosignal==1.4.0
+altair==6.0.0
 anyio==4.12.0
 appnope==0.1.4
 asttokens==3.0.1
 attrs==25.4.0
+blinker==1.9.0
+cachetools==6.2.4
 catboost==1.2.8
 certifi==2025.11.12
 charset-normalizer==3.4.4
+click==8.3.1
 colorama==0.4.6
 coloredlogs==15.0.1
 comm==0.2.3
@@ -17,12 +22,15 @@ datasets==4.4.2
 debugpy==1.8.19
 decorator==5.2.1
 dill==0.4.0
+evaluate==0.4.6
 executing==2.2.1
 filelock==3.20.1
 flatbuffers==25.12.19
 fonttools==4.61.1
 frozenlist==1.8.0
 fsspec==2025.10.0
+gitdb==4.0.12
+GitPython==3.1.46
 graphviz==0.21
 h11==0.16.0
 hf-xet==1.2.0
@@ -37,6 +45,8 @@ ipython_pygments_lexers==1.1.1
 jedi==0.19.2
 Jinja2==3.1.6
 joblib==1.5.3
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
 jupyter_client==8.7.0
 jupyter_core==5.9.1
 kiwisolver==1.4.9
@@ -70,6 +80,7 @@ psutil==7.1.3
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pyarrow==22.0.0
+pydeck==0.9.1
 Pygments==2.19.2
 pyparsing==3.2.5
 pyreadline3==3.5.4
@@ -78,21 +89,28 @@ pytorch-tabnet==4.1.0
 pytz==2025.2
 PyYAML==6.0.3
 pyzmq==27.1.0
+referencing==0.37.0
 regex==2025.11.3
 requests==2.32.5
 rocm==7.11.0a20260103
 rocm-sdk-core==7.11.0a20260103
 rocm-sdk-libraries-gfx120X-all==7.11.0a20260103
+rpds-py==0.30.0
 safetensors==0.7.0
 scikit-learn==1.8.0
 scipy==1.16.3
 seaborn==0.13.2
+sentencepiece==0.2.1
 setuptools==80.9.0
 six==1.17.0
+smmap==5.0.2
 stack-data==0.6.3
+streamlit==1.52.2
 sympy==1.14.0
+tenacity==9.1.2
 threadpoolctl==3.6.0
 tokenizers==0.22.1
+toml==0.10.2
 torch==2.9.1+rocm7.11.0a20260103
 torch-directml==0.2.5.dev240914
 torchaudio==2.9.0+rocm7.11.0a20260103
@@ -105,6 +123,7 @@ typing_extensions==4.15.0
 tzdata==2025.3
 urllib3==2.6.2
 uv==0.9.21
+watchdog==6.0.0
 wcwidth==0.2.14
 xgboost==3.1.2
 xxhash==3.6.0
